--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.5",
     "@vercel/analytics": "^1.2.2",
     "@vercel/postgres": "^0.7.2",
     "class-variance-authority": "^0.7.0",
@@ -23,6 +24,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^1.0.37",
